[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_notifykit_whatsapp"
version = "0.1.0"
description = "WhatsApp Cloud API integration for NotifyKit."
authors = [{ name = "Lumbert Omwaga" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5"
]
