[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_notifykit-whatsapp"
version = "0.1.0"
description = "WhatsApp Cloud API integration for NotifyKit"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Lumbert Omwaga" }
]

keywords = [
    "whatsapp",
    "notifykit",
    "notifications",
    "messaging",
    "whatsapp-cloud-api",
    "meta"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "requests>=2.32.0"
]

[project.urls]
Homepage = "https://github.com/LumbertEdward/py_notifykit_whatsapp"
Repository = "https://github.com/LumbertEdward/py_notifykit_whatsapp"
Issues = "https://github.com/LumbertEdward/py_notifykit_whatsapp/issues"

